--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Contact") %>
 <h1>Contact Us</h1>
 <p>
-  Contact us at
-  <a href="http://www.railstutorial.org/#contact">Rails Tutorial contact section</a>
+  Contact us the Ruby on Rails Tutorial about the sample app at the
+  <a href="http://www.railstutorial.org/#contact">contact page</a>
 </p>
