--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Contact") %>
-<h1>Contact Us</h1>
+<h1>Request Information</h1>
 <p>
-  Contact us the Ruby on Rails Tutorial about the sample app at the
-  <a href="http://www.railstutorial.org/#contact">contact page</a>
+  Contact us at our
+  <a href="http://www.gocloudlogistics.com/en/messages/new">contact page</a>
 </p>
