--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,17 +1,16 @@
 <div class="center jumbotron">
 
-  <h1>Welcome to the Sample App</h1>
+  <h1>Welcome to C.L.O.S.E.</h1>
+  <h3><strong>C</strong>loud.<strong>L</strong>ogistics.<strong>O</strong>utbound.<strong>S</strong>hipping.<strong>E</strong>nvironment</h3>
 
   <h2>
-    This is the home page for the 
-    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
+
   </h2>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "Create your account!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/' %>
+<div class="cl-logo"><%= link_to image_tag("cloud-logistics-logo.png", alt: "Cloud Logistics Logo"), 'http://www.gocloudlogistics.com/' %></div>
 
 <!-- curl -O http://rubyonrails.org/images/rails.png <- To download image
 $ mv rails.png app/assets/images/ -->
