Made changes to contact, home, and show pages for static and users

--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Contact") %>
 <h1>Request Information</h1>
 <p>
-  Contact us at our
-  <a href="http://www.gocloudlogistics.com/en/messages/new">contact page</a>
+  Contact us 
+  <a href="http://www.gocloudlogistics.com/en/messages/new">here</a>
 </p>
