--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,7 +12,7 @@
   </h2>
 
   <%= link_to "Create your account!", signup_path, class: "btn btn-lg btn-primary" %><br /><br />
-  <%= link_to "Already have an account? Log in!", login_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "Already have an account? Log in!", login_path, class: "btn btn-md btn-primary" %>
 </div>
 
 <div class="cl-logo"><%= link_to image_tag("cloud-logistics-logo.png", alt: "Cloud Logistics Logo"), 'http://www.gocloudlogistics.com/' %></div>
